1. Collection API улучшения.