@@ -4,6 +4,7 @@ import org.junit.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -19,7 +20,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(new ArrayList<>(
-                        Arrays.asList(1, 2, 3, 4, 5, 6, 7)),
+                        List.of(1, 2, 3, 4, 5, 6, 7)),
                 3
         );
         int[][] expect = {
