@@ -23,9 +23,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
@@ -33,11 +31,9 @@ public class ConvertMatrix2ListTest {
     @Test
     public void when2And4ArrayInListThenList6() {
         ConvertMatrix2List convertList = new ConvertMatrix2List();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6});
         List<Integer> result = convertList.convert(list);
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expect));
     }
 }
